# bet-with-friends

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/migrations/: 0001_types.sql  0002_users.sql  0003_bets.sql  0004_bet_participants.sql  0005_friendships.sql  0006_scores.sql  0007_relationships.sql  0008_update_timestamp.sql
backend/src/: main.rs  models.rs  repositories.rs
backend/src/models/: bet.rs  bet_participant.rs  friendship.rs  mod.rs  score.rs  tests.rs  user.rs
backend/src/models/repositories/: bet_participants.rs  bets.rs  friendships.rs  mod.rs  scores.rs  users.rs
backend/src/repositories/: bet_participants.rs  bets.rs  friendships.rs  mod.rs  scores.rs  users.rs
backend/src/router/: handlers.rs  mod.rs
backend/src/routes/: handlers.rs  mod.rs
