[package]
name = "bet-with-friends-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
